test/parse/module/bad-memory-shared-nomax.txt
;;; ERROR: 1
(module (memory shared 1))

(;; STDERR ;;;
out/test/parse/module/bad-memory-shared-nomax.txt:2:17: error: shared memories must have max sizes
(module (memory shared 1))
                ^^^^^^
;;; STDERR ;;)
